<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在载入…</string>
    <string name="pull_to_refresh_release_label">放开以刷新…</string>
    <string name="com_sina_weibo_sdk_login">登录</string>
    <string name="com_sina_weibo_sdk_login_with_weibo_account">用微博登录</string>
    <string name="com_sina_weibo_sdk_logout">注销</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_up_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_up_to_refresh_release_label</string>
    <string name="btg_global_cancel">Cancel</string>
    <string name="btg_global_confirm">OK</string>
    <string name="btg_global_error">Error! Try Again!</string>
    <string name="btg_global_got_it">Got it!</string>
    <string name="btg_guide_sub_0">Report Bug via tag</string>
    <string name="btg_guide_sub_1">Tap screen to add a tag</string>
    <string name="btg_guide_sub_2">Tap tag to flip</string>
    <string name="btg_guide_sub_3">Long press tag to edit or delete</string>
    <string name="btg_login_captcha">Captcha</string>
    <string name="btg_login_captcha_needed">Captcha needed!</string>
    <string name="btg_login_do">Sign in</string>
    <string name="btg_login_failed">Sign in failed!</string>
    <string name="btg_login_password">Password</string>
    <string name="btg_login_password_empty">Password should not be empty!</string>
    <string name="btg_login_progress">Sign in​</string>
    <string name="btg_login_succeed">Sign in succeed!</string>
    <string name="btg_login_username">Account</string>
    <string name="btg_login_username_empty">Account should not be empty!</string>
    <string name="btg_logout_confirm">Sure to sign out?</string>
    <string name="btg_logout_do">Sign out</string>
    <string name="btg_logout_my_issue">My issues</string>
    <string name="btg_logout_title">Options</string>
    <string name="btg_quick_signin_del">Sure to delete?</string>
    <string name="btg_quick_signin_desc">Click account below to sign in directly</string>
    <string name="btg_quick_signin_title">Quick Sign In</string>
    <string name="btg_report_discard_alert">Sure to discard?</string>
    <string name="btg_report_start">Start Describe</string>
    <string name="btg_report_tag_bug">Bug</string>
    <string name="btg_report_tag_hint">issue description</string>
    <string name="btg_report_tag_improve">Feature</string>
    <string name="btg_restart_log_title">Sure to restart trace?</string>
    <string name="btg_tag_menu_delete">Delete</string>
    <string name="btg_tag_menu_edit">Edit</string>
    <string name="btg_tag_menu_info">Tag info</string>
    <string name="btg_tag_num_max">Add three tags at most</string>
    <string name="btg_tag_num_min">Add one tag at least</string>
    <string name="folder_all">All Images</string>
    <string name="msg_amount_limit">Select images amount is limit</string>
    <string name="msg_no_camera">No system camera found</string>
    <string name="preview">Preview</string>
    <string name="pull_up_to_refresh_pull_label">上拉加载…</string>
    <string name="pull_up_to_refresh_release_label">放开以加载…</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="about_available">Available</string>
    <string name="about_copy_to_clipboard">Copy to clipboard</string>
    <string name="about_not_available">Not available</string>
    <string name="about_ok">OK</string>
    <string name="accept">接受</string>
    <string name="accept_friend">接受对方请求</string>
    <string name="account_security">账户与安全</string>
    <string name="action_popup">Popup settings</string>
    <string name="action_settings">Settings</string>
    <string name="add">添加</string>
    <string name="add_focus">＋关注</string>
    <string name="add_friend">加Ta为好友</string>
    <string name="add_popular">给Ta加人气</string>
    <string name="after_camera_explanation">在你拍题获得讲解之后，</string>
    <string name="after_get_explanation">在你获得习题集之后，</string>
    <string name="alert_delete">确认删除吗?</string>
    <string name="all_above_friends">以上是全部好友</string>
    <string name="all_grades">全部年级</string>
    <string name="all_grades_subjects">全部年级学科</string>
    <string name="all_in">全部</string>
    <string name="all_knowleges">全部知识点</string>
    <string name="all_name">名字</string>
    <string name="all_subjects">全部学科</string>
    <string name="all_teachers_booked">没有更多老师了</string>
    <string name="alread_have_pre">已有</string>
    <string name="already_good_comments">已好评</string>
    <string name="already_have">已有</string>
    <string name="already_select">已选</string>
    <string name="already_selected">已选择</string>
    <string name="alred_send">发送</string>
    <string name="angle">Angle</string>
    <string name="answer">回答</string>
    <string name="answer_be_accept">答案被采纳，奖励%1$s积分</string>
    <string name="answer_count">%1$s人回答</string>
    <string name="answer_detail">抢答详情</string>
    <string name="answer_detail_tips">求达人帮忙，最好有详情的解题过程,拜托大家了，辛苦了</string>
    <string name="answer_no">No</string>
    <string name="answer_type">课件 :</string>
    <string name="answer_yes">Yes</string>
    <string name="app_name">作业101</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="area_in">所 在 地 区：</string>
    <string name="ask_for_help">我要求助</string>
    <string name="ask_for_super_student">求助学霸</string>
    <string name="ask_for_super_student_how">求学霸这道题该怎么解</string>
    <string name="ask_for_teacher_help">请求名师讲解</string>
    <string name="attend_count">%1$s人回答，等待楼主采纳</string>
    <string name="audio_disabled">Audio disabled</string>
    <string name="audio_explanation">音频讲解</string>
    <string name="auto_stabilise_not_supported">"Sorry, auto-stabilise not supported
on this device"</string>
    <string name="avatar">头像</string>
    <string name="back_camera">Back Camera</string>
    <string name="bad_evaluate">差评(%1$d)</string>
    <string name="become_member">开通会员</string>
    <string name="bind">绑定</string>
    <string name="bind_mobile">绑定手机号</string>
    <string name="bind_notify">您还未绑定手机号,会有帐号风险</string>
    <string name="bind_success">绑定成功</string>
    <string name="booking_class">约课</string>
    <string name="booking_he">约TA</string>
    <string name="booking_he_whilte">约 TA</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="bref_introduction">简介:</string>
    <string name="buy">购买</string>
    <string name="buy_audio_now">现在购买音频讲解？</string>
    <string name="buy_exercisebook_free">免费购买该习题集？</string>
    <string name="buy_exercisebook_now">现在购买该习题集？</string>
    <string name="buy_exercises">购买的习题集</string>
    <string name="buy_history">购买记录</string>
    <string name="buy_success">购买成功</string>
    <string name="buy_whiteboard_now">现在购买白板讲解？</string>
    <string name="call_back">返回</string>
    <string name="camera_question_onece">再拍一题</string>
    <string name="can_select">可选</string>
    <string name="cancel_install_alipay">你已取消安装支付宝钱包</string>
    <string name="cancel_install_msp">你已取消安装移动快捷支付服务</string>
    <string name="cancel_request">取消请求</string>
    <string name="cancel_select_all">取消全选</string>
    <string name="cancelled_burst_mode">Cancelled burst mode</string>
    <string name="cancelled_timer">Cancelled timer</string>
    <string name="ensure">确定</string>
    <string name="login_please_input_phone_number">请输入手机号</string>
    <string name="login_please_input_password">请重新输入密码</string>
    <string name="register_please_input_verification_code">请输入验证码</string>
    <string name="register_send_verification_code">获取验证码</string>
    <string name="register_please_input_password">请输入6-20位字母数字组合密码</string>
    <string name="register_register">注册</string>
    <string name="homepage_operation_check">作业检查</string>
    <string name="homepage_homework_help">作业辅导</string>
    <string name="homepage_teacher_name">小美老师</string>
    <string name="homepage_teacher_help_count">辅导次数</string>
    <string name="homepage_teacher_help_price">辅导价格：</string>
    <string name="homepage_cables_teacher">连线老师</string>
    <string name="teacher_course">小学/语文</string>
    <string name="teacher_exp">教育年限：6年</string>
    <string name="teacher_grade">评分：</string>
    <string name="homework_check_money">元</string>
    <string name="confirm_cancel">取消</string>
    <string name="mine_pay_weixin">微信支付</string>
    <string name="mine_pay_alipay">支付宝支付</string>
    <string name="mine_wallet_account_balance">账户余额</string>
    <string name="mine_wallet_recharge">充值</string>
    <string name="mine_wallet_notification">注意事项</string>
    <string name="mine_wallet_notification_one">1.你若安好，便是晴天。你若安好，便是晴天。你若安好，便是晴天。你若安好，便是晴天。</string>
    <string name="mine_wallet_notification_two">2.你若安好，便是晴天。你若安好，便是晴天。你若安好，便是晴天。你若安好，便是晴天。</string>
    <string name="mine_wallet_transaction_type">交易类型</string>
    <string name="all">全部</string>
    <string name="mine_recharge_yin_pin">充值金额</string>
    <string name="mine_recharge_or">或者</string>
    <string name="mine_recharge_fifty">50元</string>
    <string name="mine_recharge_one_hundred">100元</string>
    <string name="mine_recharge_two_hundred">200元</string>
    <string name="mine_recharge_five_hundred">500元</string>
    <string name="mine_recharge_one_thousand">1000元</string>
    <string name="mine_recharge_two_thousand">2000元</string>
    <string name="mine_recharge_select_payment_method">选择支付方式</string>
</resources>