<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shushan.homework101.login.RegisterActivity">
    <include
        android:id="@+id/include_register"
        layout="@layout/actionbar_layout"/>
    <EditText
        android:id="@+id/et_register_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_please_input_phone_number"
        app:layout_constraintTop_toBottomOf="@+id/include_register"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:drawableLeft="@drawable/login_phone"
        />
    <EditText
        android:id="@+id/et_register_verification_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_please_input_verification_code"
        android:drawableLeft="@drawable/register_verification_code"
        app:layout_constraintTop_toBottomOf="@+id/et_register_phone"
        />
    <Button
        android:id="@+id/bt_register_send_verification_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_send_verification_code"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_register_verification_code"
        app:layout_constraintBottom_toBottomOf="@+id/et_register_verification_code"
        android:layout_marginBottom="@dimen/dimen_10dp"
        />
    <EditText
        android:id="@+id/et_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/et_register_verification_code"
        android:hint="@string/register_please_input_password"
        android:drawableLeft="@drawable/login_lock"
        />
    <EditText
        android:id="@+id/et_register_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/et_register_password"
        android:hint="@string/login_please_input_password"
        android:drawableLeft="@drawable/login_lock"
        />
    <Button
        android:id="@+id/bt_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_register_confirm_password"
        android:layout_marginLeft="@dimen/dimen_50dp"
        android:layout_marginRight="@dimen/dimen_50dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:text="@string/register_register"
        />
</android.support.constraint.ConstraintLayout>
