<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cl_bill_filter"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_transaction_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_large_size"
        android:textColor="@color/TextColorBlack"
        android:text="@string/mine_wallet_transaction_type"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/dimen_20dp"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/TextColorGray"
        android:textSize="@dimen/font_large_size"
        android:text="@string/confirm_cancel"
        app:layout_constraintBottom_toBottomOf="@+id/tv_transaction_type"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="@dimen/dimen_20dp"
        />
    <Button
        android:id="@+id/btn_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/TextColorBlack"
        android:textSize="@dimen/font_large_size"
        android:text="@string/all"
        app:layout_constraintTop_toBottomOf="@+id/tv_transaction_type"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_homework_check"
        android:layout_marginTop="@dimen/dimen_30dp"
        app:layout_constraintHorizontal_chainStyle="spread"
        />
    <Button
        android:id="@+id/tv_homework_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/TextColorBlack"
        android:textSize="@dimen/font_large_size"
        android:text="@string/homepage_operation_check"
        app:layout_constraintTop_toBottomOf="@+id/tv_transaction_type"
        app:layout_constraintLeft_toRightOf="@+id/btn_total"
        android:layout_marginTop="@dimen/dimen_30dp"
        />
    <Button
        android:id="@+id/tv_homework_tutorship"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/TextColorBlack"
        android:textSize="@dimen/font_large_size"
        android:text="@string/homepage_homework_help"
        app:layout_constraintTop_toBottomOf="@+id/tv_transaction_type"
        app:layout_constraintLeft_toRightOf="@+id/tv_homework_check"
        app:layout_constraintRight_toLeftOf="@+id/tv_recharge"
        android:layout_marginTop="@dimen/dimen_30dp"
        />
    <Button
        android:id="@+id/tv_recharge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/TextColorBlack"
        android:textSize="@dimen/font_large_size"
        android:text="@string/mine_wallet_recharge"
        app:layout_constraintTop_toBottomOf="@+id/tv_transaction_type"
        app:layout_constraintLeft_toRightOf="@+id/tv_homework_tutorship"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/dimen_30dp"
        />
    <Button
        android:id="@+id/tv_ensure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_recharge"
        android:layout_marginTop="@dimen/dimen_60dp"
        android:text="@string/ensure"
        android:textSize="@dimen/font_large_size"
        android:textColor="@color/TextColorWhite"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        android:background="@color/common_color_Y4"
        />
</android.support.constraint.ConstraintLayout>