<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/iv_teacher_via"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_launcher"
        app:layout_constraintDimensionRatio="16:9"
        android:padding="@dimen/dimen_20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/tv_teacher_grade"
        />
    <TextView
        android:id="@+id/tv_teacher_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homepage_teacher_name"
        app:layout_constraintLeft_toRightOf="@+id/iv_teacher_via"
        android:textSize="@dimen/font_large_size"
        android:textColor="@color/TextColorBlack"
        />
    <TextView
        android:id="@+id/tv_teacher_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teacher_course"
        app:layout_constraintLeft_toRightOf="@+id/tv_teacher_name"
        android:layout_marginStart="@dimen/dimen_10dp"
        android:textColor="@color/TextColorGray"
        android:textSize="@dimen/font_small_size"
        />
    <TextView
        android:id="@+id/tv_teacher_exp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_teacher_name"
        app:layout_constraintLeft_toLeftOf="@+id/tv_teacher_name"
        android:text="@string/teacher_exp"
        android:textSize="@dimen/font_small_size"
        android:textColor="@color/TextColorGray"
        />
    <TextView
        android:id="@+id/tv_teacher_help_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homepage_teacher_help_count"
        android:textColor="@color/TextColorGray"
        android:textSize="@dimen/font_small_size"
        app:layout_constraintTop_toBottomOf="@+id/tv_teacher_exp"
        app:layout_constraintLeft_toLeftOf="@+id/tv_teacher_exp"
        />
    <TextView
        android:id="@+id/tv_teacher_grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teacher_grade"
        android:textSize="@dimen/font_small_size"
        android:textColor="@color/TextColorGray"
        android:drawableRight="@drawable/teacher_star5_universal"
        app:layout_constraintTop_toBottomOf="@+id/tv_teacher_help_count"
        app:layout_constraintLeft_toLeftOf="@+id/tv_teacher_help_count"
        />
    <View
        android:id="@+id/view_teacher_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/TextColorBlack"
        app:layout_constraintTop_toBottomOf="@+id/tv_teacher_grade"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginLeft="@dimen/dimen_10dp"
        />
    <TextView
        android:id="@+id/tv_teacher_help_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/view_teacher_line"
        android:text="@string/homepage_teacher_help_price"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:layout_marginLeft="@dimen/dimen_10dp"
        app:layout_constraintLeft_toLeftOf="@+id/iv_teacher_via"
        android:textColor="@color/TextColorGray"
        android:textSize="@dimen/font_small_size"
        />
    <Button
        android:id="@+id/bt_teacher_cables"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homepage_cables_teacher"
        android:textColor="@color/TextColorWhite"
        android:background="@color/common_color_Y4"
        android:textSize="@dimen/font_large_size"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_teacher_line"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        />
</android.support.constraint.ConstraintLayout>