<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mine.wallet.WalletActivity">
    <include
        android:id="@+id/include_wallet"
        layout="@layout/actionbar_layout"
        ></include>
    <TextView
        android:id="@+id/tv_account_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/TextColorBlack"
        android:textSize="@dimen/font_large_size"
        android:text="@string/mine_wallet_account_balance"
        app:layout_constraintTop_toBottomOf="@+id/include_wallet"
        android:layout_marginTop="@dimen/dimen_30dp"
        />
    <TextView
        android:id="@+id/tv_account_balance_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/TextColorBlack"
        android:textSize="@dimen/font_super_big_size"
        android:text="1028.00"
        app:layout_constraintTop_toBottomOf="@+id/tv_account_balance"
        android:layout_marginTop="@dimen/dimen_20dp"
        />
    <Button
        android:id="@+id/btn_recharge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_account_balance_details"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="@dimen/font_large_size"
        android:textColor="@color/TextColorBlack"
        android:text="@string/mine_wallet_recharge"
        />
    <TextView
        android:id="@+id/tv_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_large_size"
        android:textColor="@color/TextColorBlack"
        app:layout_constraintTop_toBottomOf="@+id/btn_recharge"
        android:text="@string/mine_wallet_notification"
        android:layout_marginTop="@dimen/dimen_40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/tv_notification_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_large_size"
        android:textColor="@color/TextColorBlack"
        app:layout_constraintTop_toBottomOf="@+id/tv_notification"
        android:text="@string/mine_wallet_notification_one"
        android:layout_marginTop="@dimen/dimen_20dp"
        />
    <TextView
        android:id="@+id/tv_notification_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_large_size"
        android:textColor="@color/TextColorBlack"
        app:layout_constraintTop_toBottomOf="@+id/tv_notification_one"
        android:text="@string/mine_wallet_notification_two"
        android:layout_marginTop="@dimen/dimen_5dp"
        />
</android.support.constraint.ConstraintLayout>